--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,1 +1,18 @@
-<h1>NAVBAR</h1>
+<main>
+    <nav>
+        <div>
+            <img src="/img/logo.svg" alt="">
+        </div>
+        <div>
+            <ul>
+                <a href="/"><li>Home</li></a>
+                <a href="/about"><li>About</li></a>
+                <a href="/search"><li>Search</li></a>
+            </ul>
+        </div>
+        <div>
+            <button>Login</button>
+            <button>Get Started</button>
+        </div>
+    </nav>
+</main>
