Inicio de sesion, creado login y signup, falta arreglar signup

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -33,6 +33,9 @@ ul a li:hover {
   color: #e6f0e8;
 }
 
-.button { /* Safari */
+a {
+  text-decoration: none;
+}
+a .button { /* Safari */
   transition-duration: 0.4s;
 }/*# sourceMappingURL=navbar.css.map */
