--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,20 @@
 {{#> plantilla}}
-<h1>Login</h1>
+<link rel="stylesheet" href="/css/login.css">
 
-<form action="/login" method="POST">
-    <input type="text" id="email" placeholder="email" name="username">
-    <input type="password" id="password" placeholder="password"  name="password">
-    <input type="submit" value="enviar">
-    <button type="submit">Ingresar</button>
-</form>
+<main class="main-index">
+    
+    <div class="contenedor">
+        <h3>Login</h3>
+        <form action="/login" method="POST">
+            <input class="form-control" type="text" id="email" placeholder="email" name="username">
+            <input class="form-control" type="password" id="password" placeholder="password" name="password">
+            <button type="submit" value="enviar">Login</button>
+        </form>
+        <p>No tienes una cuenta?
+            <a href="/signup">Registrate aquí</a>
+        </p>
+    </div>
+</main>
+
+
 {{/plantilla}}
