--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -14,9 +14,11 @@
         </div>
         <div>
             <a href="/login">
-                        <button type="button" class="btn btn-light">Login</button>
+                <button type="button" class="btn btn-light">Login</button>
             </a>
-            <button type="button" class="btn btn-dark">Get Started</button>
+            <a href="/signup">
+                <button type="button" class="btn btn-dark">Get Started</button>            
+            </a>
         </div>
     </nav>
 </main>
