login y registro con nombre en tabla datos

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,9 +5,10 @@
 
     <div class="contenedor">
         <h3>Sign Up</h3>
-        <form action="/login" method="POST">
+        <form action="/signup" method="POST">
             <input class="form-control" type="text" id="name" placeholder="Name" name="name">
             <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname">
+            <input class="form-control" type="text" id="username" placeholder="Username" name="username">
             <input class="form-control" type="email" id="email" placeholder="Email" name="email">
             <input class="form-control" type="password" id="password" placeholder="Password" name="password">
             <button type="submit" value="enviar">Sign Up</button>
