:art: imagenes agregadas en login y signup

--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -3,11 +3,11 @@ body{
 }
 .main-index{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 0 0 104px 0;
-    height: 1000px;
+    height: 800px;
 }
 
 .contenedor{
