--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,16 +6,19 @@
     <div class="contenedor">
         <h3>Sign Up</h3>
         <form action="/signup" method="POST">
-            <input class="form-control" type="text" id="name" placeholder="Name" name="name">
-            <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname">
-            <input class="form-control" type="text" id="username" placeholder="Username" name="username">
-            <input class="form-control" type="email" id="email" placeholder="Email" name="email">
-            <input class="form-control" type="password" id="password" placeholder="Password" name="password">
+            <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
+            <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname" required>
+            <input class="form-control" type="text" id="username" placeholder="Username" name="username" required>
+            <input class="form-control" type="email" id="email" placeholder="Email" name="email" required>
+            <input class="form-control" type="password" id="password" placeholder="Password" name="password" required>
             <button type="submit" value="enviar">Sign Up</button>
         </form>
         <p>tienes una cuenta?
             <a href="/login">Ingresa aquí</a>
         </p>
+    </div>
+        <div class="contenedor">
+        <img src="/img/imgsignup.jpg" alt="" width="55%">
     </div>
 </main>
 
