--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
             con muchos artistas a nivel global.
         </h4>
     </div>
-    <img src="https://assets.bpmmusic.io/BPMS_Browse_Desktop_Open_Format_02_f4c1fd9f55.png" alt="" width="1000px">
+    <img src="https://assets.bpmmusic.io/BPMS_Browse_Desktop_Open_Format_02_f4c1fd9f55.png" alt="" width="80%">
 </main>
 
 {{/plantilla}}
