--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,19 +19,20 @@ body {
   align-items: center;
   text-align: center;
   padding: 0 20px 0 20px;
-  /*
-  background-image: url(/img/imgindex.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  */
 }
 .contenedor h3 {
   color: white;
-  font-size: 6.4rem;
+  font-size: 6.4vw;
   text-align: center;
 }
 .contenedor h4 {
   color: #f9f9f9;
-  font-size: 2.4rem;
+  font-size: 2.4vw;
   font-weight: inherit;
+}
+
+@media only screen and (max-width: 600px) {
+  h3 {
+    font-size: 60px;
+  }
 }/*# sourceMappingURL=index.css.map */
