--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -18,21 +18,22 @@ body{
     align-items: center;
     text-align: center;
     padding: 0 20px 0 20px;
-    /*
-    background-image: url(/img/imgindex.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    */
     h3{
         color: white;
-        font-size: 6.4rem;
+        font-size: 6.4vw;
         text-align: center;
     }
     h4{
         color: #f9f9f9;
-        font-size: 2.4rem;
+        font-size: 2.4vw;
         font-weight: inherit;
 
     }
 }
+
+@media only screen and (max-width: 600px) {
+    h3 {
+      font-size: 60px;
+    }
+  }
 
