agregando cards en community

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -1,4 +1,9 @@
 {{#> plantilla}}
+<link rel="stylesheet" href="/css/community.css">
+
 <h1>Community</h1>
+<div class="contenedor">
+    {{> cards}}
+</div>
 
 {{/plantilla}}
