Falta terminar hbs user

--- a/views/partials/cards.hbs
+++ b/views/partials/cards.hbs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/css/cards.css">
+
+<a href="/about">
 <div class="card">
-    
     <div>
         <div>
             <img src="/img/prueba.jpg" alt="">
@@ -10,3 +11,19 @@
     </div>
     <button type="button" class="btn btn-light">Conectar</button>
 </div>
+</a>
+
+<a href="/community">
+<div class="card">
+    <div>
+        <div>
+            <img src="/img/prueba.jpg" alt="">
+        </div>
+        <p>nombre artista</p>
+        <p>genero musical</p>
+    </div>
+    <button type="button" class="btn btn-light">Conectar</button>
+</div>
+</a>
+
+
