--- a/views/community.hbs
+++ b/views/community.hbs
@@ -1,7 +1,12 @@
 {{#> plantilla}}
+
+{{#each nombres}}
+    <p>nombres del array</p>
+{{/each}}
 <link rel="stylesheet" href="/css/community.css">
 
 <h1>Community</h1>
+
 <div class="contenedor">
     {{> cards}}
 </div>
