--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -1,4 +1,70 @@
 {{#> plantilla}}
-<h1>mantenedor</h1>
+<link rel="stylesheet" href="/css/mantenedor/index.css">
+
+<div class="container">
+    <h1>Bienvenido Administrador</h1>
+    <div class="contenedor">
+        <aside>
+            <a href="/mantenedor">
+                <button type="button" class="btn btn-dark">Crear nuevo usuario</button>
+            </a>
+        </aside>
+        <section>
+            <table class="table">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Correo</th>
+                        <th scope="col">Editar</th>
+                        <th scope="col">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    {{#each usuarios}}
+                    <tr>
+                        <th scope="row">{{this.idusuario}}</th>
+                        <td>{{this.nombreusuario}}</td>
+                        <td>{{this.apellidousuario}}</td>
+                        <td>{{this.emailusuario}}</td>
+                        <td><a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><img src="/img/icons/edit.svg" alt="" width="25px"></a></td>
+                        <td><a href="/mantenedor" id="eliminar"><img src="/img/icons/delete.svg" alt="" width="25px"></a></td>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Editar Usuario</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
+                                        <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname" required>
+                                        <input class="form-control" type="text" id="username" placeholder="Username" name="username" required>
+                                        <input class="form-control" type="email" id="email" placeholder="Email" name="email" required>
+                                        <input class="form-control" type="password" id="password" placeholder="Password" name="password" required>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-ligth"
+                                            data-bs-dismiss="modal">Cerrar</button>
+                                        <button type="button" class="btn btn-dark">Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </section>
+    </div>
+
+</div>
+
+<script src="/js/mantenedor/index.js"></script>
 
 {{/plantilla}}
