--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -5,39 +5,45 @@
     <h1>Welcome Admin</h1>
     <div class="contenedor">
         <aside>
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#crearUsuario">Add new user</button>
-                <div class="modal fade" id="crearUsuario" data-bs-backdrop="static" data-bs-keyboard="false"
-                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Add User</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form action="/mantenedor" method="POST">
-                                    <input class="form-control" type="text" id="name" placeholder="Name" name="name" required>
-                                    <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname" required>
-                                    <input class="form-control" type="text" id="username" placeholder="Username" name="username" required>
-                                    <input class="form-control" type="email" id="email" placeholder="Email" name="email" required>
-                                    <input class="form-control" type="password" id="password" placeholder="Password" name="password" required>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" id="admin" name="admin">
-                                        <label class="form-check-label" for="isAdmin">
-                                            Es administrador
-                                        </label>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-ligth" data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="submit" class="btn btn-dark" value="enviar">Guardar</button>
-                                    </div>
-                                </form>
-                            </div>
-
+            <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#crearUsuario">Add new
+                user</button>
+            <div class="modal fade" id="crearUsuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Add User</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
+                        <div class="modal-body">
+                            <form action="/mantenedor" method="POST">
+                                <input class="form-control" type="text" id="name" placeholder="Name" name="name"
+                                    required>
+                                <input class="form-control" type="text" id="lastname" placeholder="Lastname"
+                                    name="lastname" required>
+                                <input class="form-control" type="text" id="username" placeholder="Username"
+                                    name="username" required>
+                                <input class="form-control" type="email" id="email" placeholder="Email" name="email"
+                                    required>
+                                <input class="form-control" type="password" id="password" placeholder="Password"
+                                    name="password" required>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="1" id="admin" name="admin">
+                                    <label class="form-check-label" for="isAdmin">
+                                        Es administrador
+                                    </label>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-ligth" data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="submit" class="btn btn-dark" value="enviar">Guardar</button>
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
-            
+            </div>
+
         </aside>
         <section>
             <table class="table">
@@ -52,6 +58,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    
 
                     {{#each usuarios}}
                     <tr>
@@ -59,12 +66,12 @@
                         <td>{{this.nombreusuario}}</td>
                         <td>{{this.apellidousuario}}</td>
                         <td>{{this.emailusuario}}</td>
-                        <td><a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><img
-                                    src="/img/icons/edit.svg" alt="" width="25px"></a></td>
-                        <td><a href="/mantenedor" id="eliminar"><img src="/img/icons/delete.svg" alt=""
-                                    width="25px"></a></td>
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                        <td><a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#editModal"><img src="/img/icons/edit.svg" alt="" width="25px"></a></td>
+                        <td><a id="{{this.idusuario}}" href="/mantenedor/{{this.idusuario}}">
+                        <img src="/img/icons/delete.svg" alt="" width="25px"></a>
+                        </td>
+                        <!-- Modal Editar -->
+                        <div class="modal fade" id="editModal" data-bs-backdrop="static" data-bs-keyboard="false"
                             tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
@@ -93,6 +100,30 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Modal Eliminar
+                        <div class="modal fade" id="deleteModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete user</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete this user?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-ligth" data-bs-dismiss="modal">Close</button>
+                                    <a href="/mantenedor/{{this.idusuario}}">
+                                    <p>{{this.idusuario}}</p>
+                                        <button type="button" class="btn btn-dark">Delete user</button>                 
+                                    </a>
+                   
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         -->
                     </tr>
                     {{/each}}
                 </tbody>
