--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -66,40 +66,46 @@
                         <td>{{this.nombreusuario}}</td>
                         <td>{{this.apellidousuario}}</td>
                         <td>{{this.emailusuario}}</td>
-                        <td><a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#editModal"><img src="/img/icons/edit.svg" alt="" width="25px"></a></td>
-                        <td><a id="{{this.idusuario}}" href="/mantenedor/{{this.idusuario}}">
-                        <img src="/img/icons/delete.svg" alt="" width="25px"></a>
-                        </td>
-                        <!-- Modal Editar -->
-                        <div class="modal fade" id="editModal" data-bs-backdrop="static" data-bs-keyboard="false"
-                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Editar Usuario</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <input class="form-control" type="text" id="name" placeholder="Name" name="name"
-                                            required>
-                                        <input class="form-control" type="text" id="lastname" placeholder="Lastname"
-                                            name="lastname" required>
-                                        <input class="form-control" type="text" id="username" placeholder="Username"
-                                            name="username" required>
-                                        <input class="form-control" type="email" id="email" placeholder="Email"
-                                            name="email" required>
-                                        <input class="form-control" type="password" id="password" placeholder="Password"
-                                            name="password" required>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-ligth"
-                                            data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="button" class="btn btn-dark">Guardar</button>
+                        <td>
+                            <a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#editModal{{this.idusuario}}">
+                                <img src="/img/icons/edit.svg" alt="" width="25px">
+                            </a>
+
+                            <!-- NO SE PASAN LOS VALORES AL MODAL-->
+                            <div class="modal fade" id="editModal{{this.idusuario}}">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Editar Usuario</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form action="/mantenedor/update" method="POST">
+                                                <input class="form-control" type="text" id="idusuario" name="idusuario" placeholder="id" value="{{this.idusuario}}" required>
+                                                <input class="form-control" type="text" id="name" placeholder="Name" name="name" value="{{this.nombreusuario}}" required>
+                                                <input class="form-control" type="text" id="lastname" placeholder="Lastname" name="lastname" value="{{this.apellidousuario}}" required>
+                                                <input class="form-control" type="text" id="username" placeholder="Username" name="username" value="{{this.nickusuario}}" required>
+                                                <input class="form-control" type="email" id="email" placeholder="Email" name="email" value="{{this.emailusuario}}" required>
+                                                <input class="form-control" type="password" id="password" placeholder="Password" name="password" value="{{this.claveusuario}}" required>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-ligth"
+                                                            data-bs-dismiss="modal">Cerrar</button>
+                                                        <button type="submit" class="btn btn-dark">Guardar</button>
+                                                    </div>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </td>
+                        <td><a id="{{this.idusuario}}" href="/mantenedor/{{this.idusuario}}">
+                        <img src="/img/icons/delete.svg" alt="" width="25px"></a>
+
+                        </td>
+                        
+                        <!-- Modal Editar -->
+
                         <!-- Modal Eliminar
                         <div class="modal fade" id="deleteModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
