:construction: mantenedor datos en tabla api

--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -62,10 +62,10 @@
 
                     {{#each usuarios}}
                     <tr>
-                        <th scope="row">{{this.idusuario}}</th>
-                        <td>{{this.nombreusuario}}</td>
-                        <td>{{this.apellidousuario}}</td>
-                        <td>{{this.emailusuario}}</td>
+                        <th scope="row">{{this.idUsuario}}</th>
+                        <td>{{this.nombreUsuario}}</td>
+                        <td>{{this.apellidoUsuario}}</td>
+                        <td>{{this.emailUsuario}}</td>
                         <td>
                             <a href="/mantenedor" data-bs-toggle="modal" data-bs-target="#editModal{{this.idusuario}}">
                                 <img src="/img/icons/edit.svg" alt="" width="25px">
