--- a/views/community.hbs
+++ b/views/community.hbs
@@ -1,6 +1,6 @@
 {{#> plantilla}}
 
-<div class="container">
+<div class="container-lg">
     <h1>Community</h1>
         <h3>Genres</h3>
     <div class="splide" id="splide1">
