add: estructura genero/id mostrando nombre de genero musical y cards con informacion, :construction: agregar datos a todos los generos musicales porque se cae el programa

--- a/public/css/cards.scss
+++ b/public/css/cards.scss
@@ -1,8 +1,9 @@
 .card{
     background-color: #212121;
-    width: 240px;
+    width: 250px;
     height: 320px;
     padding: 16px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
