--- a/views/partials/cards.hbs
+++ b/views/partials/cards.hbs
@@ -1,29 +1,17 @@
 <link rel="stylesheet" href="/css/cards.css">
 
-<a href="/about">
+{{#each usuariosGenero}}
+<a href="/about"></a>
 <div class="card">
     <div>
         <div>
             <img src="/img/prueba.jpg" alt="">
         </div>
+        <h1>{{this.nombreUsuario}}</h1>
         <p>nombre artista</p>
         <p>genero musical</p>
     </div>
     <button type="button" class="btn btn-light">Conectar</button>
 </div>
 </a>
-
-<a href="/community">
-<div class="card">
-    <div>
-        <div>
-            <img src="/img/prueba.jpg" alt="">
-        </div>
-        <p>nombre artista</p>
-        <p>genero musical</p>
-    </div>
-    <button type="button" class="btn btn-light">Conectar</button>
-</div>
-</a>
-
-
+{{/each}}
