add: Nombre Genero mayuscula primera letra  router.js

--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/css/cards.css">
 
 <div class="container-md">
-    <h1>{{genero}}</h1>
+    <h1>{{nombreGenero}}</h1>
 
     <div class="contenedor-cards">
         <div class="row">
