--- a/public/css/community.css
+++ b/public/css/community.css
@@ -3,4 +3,14 @@
   width: 100%;
   height: 800px;
   padding: 20px;
+}
+
+p {
+  padding: 0;
+  margin: 0;
+}
+
+.nickUsuario {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }/*# sourceMappingURL=community.css.map */
