--- a/public/css/community.scss
+++ b/public/css/community.scss
@@ -1,6 +1,16 @@
+
 .contenedor{
     background-color: red;
     width: 100%;
     height: 800px;
     padding: 20px;
+}
+p{
+    padding: 0;
+    margin: 0;
+    
+}
+.nickUsuario{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
