--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -15,7 +15,7 @@
                         <div>
                             <img src="/img/prueba.jpg" alt="">
                         </div>
-                        <p>Usuario: {{this.nickUsuario}}</p>
+                        <p>{{this.nombreArtistaPerfil}}</p>
                         <p>Genero: {{this.nombreGenero_musical}}</p>
                     </div>
                     <button type="button" class="btn btn-light">Ver</button>
