add: Nueva conexion en top artist hacia la pagina profile, agregado profile.hbs

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -27,7 +27,7 @@
                 {{#each top10}}
                 <div class="splide__slide">
                     <div class="img_box">
-                        <a href="https://splidejs.com/">
+                        <a href="http://localhost:3000/perfil/{{this.idUsuario}}">
                             <img src="/img/prueba.jpg" alt="" width="150px" height="150px">
                         </a>
                         <div>
