add: Agregado link a cards hacia perfil de usuario

--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -18,7 +18,8 @@
                         <p>{{this.nombreArtistaPerfil}}</p>
                         <p>Genero: {{this.nombreGenero_musical}}</p>
                     </div>
-                    <button type="button" class="btn btn-light">Ver</button>
+                    <a href="http://localhost:3000/perfil/{{this.idUsuario}}" class="btn btn-light"> ver </a>
+                    
                 </div>
             </div>
             {{/each}}
