fix: error inicio de sesion cuando se equivoca al ingresar un usuario

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -6,6 +6,8 @@
     <p>{{usuarios.apellidoUsuario}}</p>
     <p>{{usuarios.telefonoPerfil}}</p>
     <p>{{usuarios.biografiaPerfil}}</p>
+
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5GX2ksWZQIkqvAaZ4fbK76?utm_source=generator&theme=0" width="60%" height="452" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 
 {{/plantilla}}
