--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,6 +14,15 @@
             <br>
             con muchos artistas a nivel global.
         </h4>
+
+        <div class="sesion2">
+            <a href="/login">
+                <button type="button" class="btn btn-light">Login</button>
+            </a>
+            <a href="/signup">
+                <button type="button" class="btn btn-dark">Get Started</button>            
+            </a>
+        </div>
         
     </div>
 
