--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,7 +12,7 @@
                 <a href="/community"><li>Community</li></a>
             </ul>
         </div>
-        <div>
+        <div class="sesion">
             <a href="/login">
                 <button type="button" class="btn btn-light">Login</button>
             </a>
