--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,17 +22,22 @@ body {
 }
 .contenedor h3 {
   color: white;
-  font-size: 6.4vw;
+  font-size: 70px;
   text-align: center;
 }
 .contenedor h4 {
   color: #f9f9f9;
-  font-size: 2.4vw;
+  font-size: 30px;
   font-weight: inherit;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 1000px) {
   h3 {
-    font-size: 60px;
+    font-size: 100px !important;
+  }
+}
+@media only screen and (min-width: 550px) {
+  .sesion2 {
+    display: none;
   }
 }/*# sourceMappingURL=index.css.map */
