--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -20,20 +20,26 @@ body{
     padding: 0 20px 0 20px;
     h3{
         color: white;
-        font-size: 6.4vw;
+        font-size: 70px;
         text-align: center;
     }
     h4{
         color: #f9f9f9;
-        font-size: 2.4vw;
+        font-size: 30px;
         font-weight: inherit;
 
     }
 }
+  @media only screen and (min-width: 1000px) {
 
-@media only screen and (max-width: 600px) {
     h3 {
-      font-size: 60px;
+        font-size: 100px !important;
     }
+
   }
 
+  @media only screen and (min-width: 550px) {
+    .sesion2{
+        display: none;
+    }
+  }
