fix: Formulario responsive

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -32,6 +32,12 @@ body {
   text-align: center;
 }
 
+.contenedor2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -39,13 +45,13 @@ form {
   padding-bottom: 8px;
 }
 form input {
-  width: 430px;
+  width: 400px;
   height: 40px;
   background-color: black;
   color: black;
 }
 form button {
-  width: 430px;
+  width: 400px;
   height: 40px;
   background-color: #e6f0e8;
   border: none;
@@ -59,4 +65,21 @@ p {
 p a {
   color: #737875;
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 550px) {
+  .imagen {
+    display: none;
+  }
+  button {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 390px) {
+  form {
+    width: 350px;
+  }
+  button {
+    width: 350px !important;
+  }
 }/*# sourceMappingURL=signup.css.map */
