--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -17,9 +17,9 @@
             <a href="/login">Ingresa aquí</a>
         </p>
     </div>
-        <div class="contenedor">
-        <img src="/img/imgsignup.jpg" alt="" width="55%">
-    </div>
+        <div class="contenedor2">
+            <img class="imagen" src="/img/imgsignup.jpg" alt="" width="50%">
+        </div>
 </main>
 
 <script src="/js/signup.js"></script>
