--- a/public/css/signup.scss
+++ b/public/css/signup.scss
@@ -10,7 +10,7 @@ body{
     height: 100vh;
 }
 
-.contenedor{
+.contenedor {
     width: 100%;
     height: 40vh;
     display: flex;
@@ -30,20 +30,25 @@ body{
         text-align: center;
     }
 }
-
+.contenedor2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 form{
     display: flex;
     flex-direction: column;
     gap: 30px;
     padding-bottom: 8px;
+    
     input{
-        width: 430px;
+        width: 400px;
         height: 40px;
         background-color: black;
         color: black;
     }
     button{
-        width: 430px;
+        width: 400px;
         height: 40px;
         background-color: #e6f0e8;
         border: none;
@@ -58,3 +63,22 @@ p{
         text-decoration: underline;
     }
 }
+
+@media only screen and (max-width: 550px) {
+    .imagen{
+        display: none;
+    }
+    button{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    form{
+        width: 350px;
+    }
+    button{
+        width: 350px !important;
+    }
+}
+
