fix: responsive login

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -32,6 +32,12 @@ body {
   text-align: center;
 }
 
+.contenedor2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -59,4 +65,21 @@ p {
 p a {
   color: #737875;
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 550px) {
+  .imagen {
+    display: none;
+  }
+  button {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 390px) {
+  form {
+    width: 350px;
+  }
+  button {
+    width: 350px !important;
+  }
 }/*# sourceMappingURL=login.css.map */
