--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,8 +14,8 @@
             <a href="/signup">Registrate aquí</a>
         </p>
     </div>
-    <div class="contenedor">
-        <img src="/img/imglogin.jpg" alt="" width="55%">
+    <div class="contenedor2">
+        <img class="imagen" src="/img/imglogin.jpg" alt="" width="55%">
     </div>
 </main>
 
