--- a/public/css/index.css
+++ b/public/css/index.css
@@ -40,4 +40,15 @@ body {
   .sesion2 {
     display: none;
   }
+}
+@media only screen and (max-width: 550px) {
+  .sesion2 {
+    display: none;
+  }
+  h3 {
+    font-size: 40px !important;
+  }
+  h4 {
+    font-size: 20px !important;
+  }
 }/*# sourceMappingURL=index.css.map */
