--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -43,3 +43,14 @@ body{
         display: none;
     }
   }
+  @media only screen and (max-width: 550px) {
+    .sesion2{
+        display: none;
+    }
+    h3{
+        font-size: 40px !important;
+    }
+    h4{
+        font-size: 20px !important;
+    }
+  }
