--- a/public/css/mantenedor/index.css
+++ b/public/css/mantenedor/index.css
@@ -1,10 +1,18 @@
 .contenedor {
   padding-bottom: 100px;
   display: flex;
+  justify-content: center;
 }
 .contenedor aside {
   width: 20%;
 }
 .contenedor section {
   width: 80%;
+}
+
+@media only screen and (max-width: 950px) {
+  .contenedor {
+    flex-direction: column;
+    gap: 4px;
+  }
 }/*# sourceMappingURL=index.css.map */
