--- a/views/mantenedor/index.hbs
+++ b/views/mantenedor/index.hbs
@@ -1,7 +1,7 @@
 {{#> plantilla}}
 <link rel="stylesheet" href="/css/mantenedor/index.css">
 
-<div class="container">
+<div class="container-fluid">
     <h1>Welcome Admin</h1>
     <div class="contenedor">
         <aside>
