fix: cambios menores

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -19,7 +19,8 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/01wn2JqJHSueTZOrGkJz44?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </aside>
     <aside class="container-spotify">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/heON3QMOVU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </aside>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/heON3QMOVU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</aside>
 
 
 </div>
