--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -7,6 +7,9 @@
 
 .container-profile {
   width: 60%;
+  background-color: rgb(183, 183, 183);
+  border-radius: 12px;
+  padding: 16px;
 }
 .container-profile .likes {
   display: flex;
