--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -6,7 +6,9 @@
 }
 .container-profile{
     width: 60%;
-
+    background-color: rgb(183, 183, 183);
+    border-radius: 12px;
+    padding: 16px;
     .likes{
         display: flex;
         width: 100px;
@@ -22,7 +24,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
 
 @media only screen and (max-width: 1000px) {
