--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,6 +10,7 @@
                 <a href="/"><li>Home</li></a>
                 <a href="/about"><li>About</li></a>
                 <a href="/community"><li>Community</li></a>
+                <a href="/mantenedor"><li>Admin</li></a>
             </ul>
         </div>
         <div class="sesion">
