--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,24 +3,22 @@
 <div class="container-md">
     <div class="container-profile">
         <h1>{{usuarios.nombreArtistaPerfil}}</h1>
-    <h2>{{usuarios.tituloPerfil}}</h2>
-    <p>{{usuarios.nombreUsuario}}</p>
-    <p>{{usuarios.apellidoUsuario}}</p>
-    <p>{{usuarios.telefonoPerfil}}</p>
-    <p>{{usuarios.biografiaPerfil}}</p>
-    <div class="likes">
-        <img src="/img/icons/heart.svg" alt="" width="20px">
-        <strong>{{usuarios.topUsuario}}</strong>
-        <p>likes</p>
-    </div>
+        <h2>{{usuarios.tituloPerfil}}</h2>
+        <p>Nombre: {{usuarios.nombreUsuario}}</p>
+        <p>Apellido: {{usuarios.apellidoUsuario}}</p>
+        <p>Numero: {{usuarios.telefonoPerfil}}</p>
+        <p>{{usuarios.biografiaPerfil}}</p>
+        <div class="likes">
+            <img src="/img/icons/heart.svg" alt="" width="20px">
+            <strong>{{usuarios.topUsuario}}</strong>
+            <p>likes</p>
+        </div>
     </div>
 
     <aside class="container-spotify">
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/01wn2JqJHSueTZOrGkJz44?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </aside>
-    <aside class="container-spotify">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/heON3QMOVU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</aside>
+
 
 
 </div>
