--- a/views/community.hbs
+++ b/views/community.hbs
@@ -8,12 +8,12 @@
             <div class="splide__list">
                 {{#each generos}}
                     <div class="splide__slide">
-                    <div class="img_box">
-                        <a href="http://localhost:3000/genero/{{this.idGenero_musical}}"">
-                            <img src="{{this.imagenGenero_musical}}" alt="" width="150px" height="150px">
-                        </a>
+                        <div class="img_box">
+                            <a href="http://localhost:3000/genero/{{this.idGenero_musical}}">
+                                <img src="{{this.imagenGenero_musical}}" alt="" width="150px" height="150px">
+                            </a>
+                        </div>
                     </div>
-                </div>
                 {{/each}}
             </div>
         </div>
@@ -23,7 +23,6 @@
     <div class="splide" id="splide2">
         <div class="splide__track">
             <div class="splide__list">
-
                 {{#each top10}}
                 <div class="splide__slide">
                     <div class="img_box">
