--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,9 +4,18 @@
     <div class="container-profile">
         <h1>{{usuarios.nombreArtistaPerfil}}</h1>
         <h2>{{usuarios.tituloPerfil}}</h2>
-        <p>Nombre: {{usuarios.nombreUsuario}}</p>
-        <p>Apellido: {{usuarios.apellidoUsuario}}</p>
-        <p>Numero: {{usuarios.telefonoPerfil}}</p>
+        <div>
+            <strong>Nombre</strong>
+            <p>{{usuarios.nombreUsuario}} {{usuarios.apellidoUsuario}}</p>
+        </div>
+        
+        <div>
+            <strong>Contacto</strong>
+            <p>+56{{usuarios.telefonoPerfil}} {{usuarios.emailUsuario}}</p>
+        </div>
+            
+
+        
         <p>{{usuarios.biografiaPerfil}}</p>
         <div class="likes">
             <img src="/img/icons/heart.svg" alt="" width="20px">
@@ -14,12 +23,53 @@
             <p>likes</p>
         </div>
     </div>
-
-    <aside class="container-spotify">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/01wn2JqJHSueTZOrGkJz44?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <aside class="container-imagen">
+        <div class="splide" id="splide">
+            <div class="splide__track">
+                    <div class="splide__list">
+                        <div class="splide__slide">
+                            <div class="img_box">
+                                    <img src="/img/prueba.jpg" alt="" width="100%">
+                            </div>
+                        </div>
+                        <div class="splide__slide">
+                            <div class="img_box">
+                                    <img src="/img/prueba2.jpg" alt="" width="100%">
+                        </div>
+                        </div>
+                        <div class="splide__slide">
+                            <div class="img_box">
+                                    <img src="/img/prueba.jpg" alt="" width="100%">
+                        </div>
+                       
+                    </div>
+            </div>
+        </div>
     </aside>
-
-
-
 </div>
+
+<div class="container-md">
+    <section class="container-spotify"> 
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/{{usuarios.spotifyPerfil}}?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </section>
+    <section class="container-youtube">
+<iframe width="560" height="515" src="https://www.youtube.com/embed/{{usuarios.youtubePerfil}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </section>
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+<script type="text/javascript">
+    var splide2 = new Splide( '#splide', {
+        type    : 'loop',
+        perPage : 1,
+        autoplay: true,
+        drag: boolean = true,
+        pagination: boolean = false,
+        height   : 'auto',
+        focus  : 'center',
+        width: '100%'
+    } ).mount();
+
+</script>
 {{/plantilla}}
