fix: Nuevos cambios en profile :construction:

--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -6,7 +6,14 @@
 }
 .container-profile{
     width: 50%;
-    background-color: rgb(183, 183, 183);
+
+    background: rgba( 0, 0, 0, 0.05 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 1.5px );
+    -webkit-backdrop-filter: blur( 1.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
     border-radius: 12px;
     padding: 32px;
     .likes{
