--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,5 +1,10 @@
 .card {
-  background-color: #212121;
+  background: rgba(0, 0, 0, 0.85);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   width: 250px;
   height: 320px;
   padding: 16px;
