--- a/public/css/genres.css
+++ b/public/css/genres.css
@@ -7,6 +7,19 @@
   justify-content: center;
 }
 
+.likes {
+  display: flex;
+  width: 100px;
+  gap: 2px;
+}
+.likes img {
+  width: 20px !important;
+}
+.likes p {
+  padding: 0;
+  margin: 0;
+}
+
 @media only screen and (max-width: 1220px) {
   .contenedor-cards {
     grid-template-columns: auto auto auto;
